<resources>
    <string name="app_name" translatable="false">Atomatic</string>
    <string name="url_privacy_policy" translatable="false">https://adeekshith.github.io/watomatic/#/privacy-policy.md</string>
    <string name="adeekshith_twitter_handle" translatable="false">\@adeekshith</string>
    <string name="url_adeekshith_twitter" translatable="false">https://twitter.com/adeekshith</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="service_name">Incoming Message Notification Listener</string>
    <string name="mainAutoReplyTextPlaceholder">(Custom Reply)</string>
    <string name="auto_reply_default_message">Auto Reply\n⚠️ Thanks for your message! I’m currently unavailable and will get back to you as soon as I can.</string>
    <string name="ai_auto_reply_default_message">AI Replies Enabled\nMessages are smartly handled by AI</string>
    <string name="mainAutoReplyLabel">Auto reply text</string>
    <string name="mainAutoReplySwitchOffLabel">Auto reply OFF</string>
    <string name="mainAutoReplySwitchOnLabel">Auto reply ON</string>
    <string name="mainAutoReplyEditBtnTooltip">Click to edit auto reply text</string>
    <string name="to_help_you_leave_whatsapp">Setup auto-reply to help you leave messaging apps</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="sure">I\'m Sure</string>
    <string name="retry">Retry</string>
    <string name="permission_dialog_title">Permission Required</string>
    <string name="permission_dialog_msg">This app requires Notification Access permissions to work.</string>
    <string name="permission_dialog_denied_title">Permission Denied</string>
    <string name="permission_dialog_denied_msg">Without this permission app is unable to auto-reply to the notifications. Are you sure you want to deny the permission?</string>
    <string name="enable_for_apps">Enable for apps</string>
    <string name="enable_auto_reply_switch_msg">Enable Auto Reply Switch First.</string>
    <string name="error_atleast_single_app_must_be_selected">Error: Select at-least a single app</string>
    <string name="groupReplySwitchLabel">Auto reply for Group chats</string>
    <string name="group_reply_on_info_message">Enabled auto reply for group chats</string>
    <string name="group_reply_off_info_message">Disabled auto reply for group chats</string>
    <string name="time_picker_title">Reply frequency (BETA)</string>
    <string name="time_picker_sub_title_default">Respond to all messages without control</string>
    <string name="time_picker_sub_title">Respond only once every %1$d day(s) for each person or group</string>
    <string name="time_format_placeholder">00:00</string>
    <string name="time_picker_edit_btn_tooltip">Click to edit time delay between replies</string>
    <string name="app_version">v%1$s</string>
    <string name="save">Save</string>
    <string name="tip_view_messages_from_fellow_users">🦩 <u>View templates from community and share yours too ➚</u></string>
    <string name="append_watomatic_arribution_checkbox_label">Append Atomatic arribution to help spread the word</string>
    <string name="sent_using_Watomatic">Sent using atomatic.app</string>
    <string name="share_app_text">I am using Atomatic to break away from messaging apps. Try it out: watomatic.app</string>
    <string name="share">Share</string>
    <string name="share_subject">Atomatic: Auto Reply for Messaging apps</string>
    <string name="watomatic_community_label"><u>Community</u></string>
    <string name="watomatic_subreddit_label"><u>Let\'s discuss\nr/watomatic</u></string>
    <string name="watomatic_subreddit_url" translatable="false">https://www.reddit.com/r/watomatic</string>
    <string name="watomatic_github_url" translatable="false">https://github.com/adeekshith/watomatic</string>
    <string name="watomatic_wato_message_url" translatable="false">https://www.reddit.com/r/watomatic/comments/lrkn7j/fellow_watos_share_your_creative_wato_message/</string>
    <string name="watomatic_whatsnew_label">What\'s New?</string>
    <string name="watomatic_github_latest_release_url" translatable="false">https://github.com/adeekshith/watomatic/releases/latest</string>
    <string name="app_logs_file_name" translatable="false">WatomaticLogs.txt</string>
    <string name="share_email_body" translatable="false">Hi Team Watomatic,\nPlease find the attachment of the app logs.</string>
    <string name="share_email_subject" translatable="false">Watomatic AppLogs</string>
    <string name="share_email_id" translatable="false">watomatic@deekshith.in</string>
    <string name="share_email_err_msg" translatable="false">Couldnot find any application to process this request</string>
    <string name="key_pref_app_language" translatable="false">pref_app_language</string>
    <string name="pref_show_notification_replied_msg" translatable="false">pref_show_notification_replied_msg</string>
    <string name="pref_auto_start_permission" translatable="false">pref_auto_start_permission</string>
    <string name="pref_is_append_watomatic_attribution" translatable="false">pref_is_append_watomatic_attribution</string>
    <string name="pref_show_foreground_service_notification" translatable="false">pref_show_foreground_service_notification</string>
    <string name="show_notification_label">Show notification for replied messages</string>
    <string name="preference_category_general_label">General</string>
    <string name="preference_category_notifications_label">Notifications</string>
    <string name="preference_category_troubleshooting_label">Troubleshooting</string>
    <string name="enable_auto_start_label">Enable Auto Start</string>
    <string name="add_attribution_label">Add Attribution</string>
    <string name="enabled_apps_title">Enabled Apps</string>
    <string name="always_on_notification">Always-On notification</string>
    <string name="display_persistent_notification_summary">Display a persistent notification to ensure Watomatic is not killed by the system</string>
    <string name="enable_auto_start_summary">Some devices might need you to manually enable Auto start for Watomatic from device settings</string>
    <string name="lang_en" translatable="false">English (en)</string>
    <string name="lang_ar_rSA" translatable="false">اَلْعَرَبِيَّةُ (ar-SA)</string>
    <string name="lang_ca_rES" translatable="false">Català (ca-ES)</string>
    <string name="lang_de_rDE" translatable="false">Deutsch (de-DE)</string>
    <string name="lang_es_rES" translatable="false">Español (es-ES)</string>
    <string name="lang_es_rMX" translatable="false">Español (México) (es-MX)</string>
    <string name="lang_eu_rES" translatable="false">Euskara (eu-ES)</string>
    <string name="lang_fi_rFI" translatable="false">Suomi (fi_FI)</string>
    <string name="lang_fr_rFR" translatable="false">Français (fr-FR)</string>
    <string name="lang_in_rID" translatable="false">Indonesian (in-ID)</string>
    <string name="lang_it_rIT" translatable="false">Italiano (it-IT)</string>
    <string name="lang_mk_rMK" translatable="false">македонски јазик (mk-MK)</string>
    <string name="lang_nl_rNL" translatable="false">Nederlands (nl-NL)</string>
    <string name="lang_pt_rBR" translatable="false">Portuguese (pt-BR)</string>
    <string name="lang_pl_rPL" translatable="false">Polski (pl-PL)</string>
    <string name="lang_ru_rRU" translatable="false">Pусский (ru-RU)</string>
    <string name="lang_ta_rIN" translatable="false">தமிழ் (ta-IN)</string>
    <string name="lang_tr_rTR" translatable="false">Türkçe (tr-TR)</string>
    <string name="lang_hi_rIN" translatable="false">हिंदी (hi-IN)</string>
    <string name="lang_code_en" translatable="false">en</string>
    <string name="lang_code_ar_rSA" translatable="false">ar-SA</string>
    <string name="lang_code_ca_rES" translatable="false">ca-ES</string>
    <string name="lang_code_de_rDE" translatable="false">de-DE</string>
    <string name="lang_code_es_rES" translatable="false">es-ES</string>
    <string name="lang_code_es_rMX" translatable="false">es-MX</string>
    <string name="lang_code_eu_rES" translatable="false">eu-ES</string>
    <string name="lang_code_fi_rFI" translatable="false">fi-FI</string>
    <string name="lang_code_fr_rFR" translatable="false">fr-FR</string>
    <string name="lang_code_in_rID" translatable="false">in-ID</string>
    <string name="lang_code_it_rIT" translatable="false">it-IT</string>
    <string name="lang_code_mk_rMK" translatable="false">mk-MK</string>
    <string name="lang_code_nl_rNL" translatable="false">nl-NL</string>
    <string name="lang_code_pt_rBR" translatable="false">pt-BR</string>
    <string name="lang_code_pl_rPL" translatable="false">pl-PL</string>
    <string name="lang_code_ru_rRU" translatable="false">ru-RU</string>
    <string name="lang_code_ta_rIN" translatable="false">ta-IN</string>
    <string name="lang_code_tr_rTR" translatable="false">tr-TR</string>
    <string name="lang_code_hi_rIN" translatable="false">hi-IN</string>
    <string name="app_language">App Language</string>
    <string name="app_rating_dialog_title">What do you think?</string>
    <string name="app_rating_dialog_msg">We are interested in what you think of the app. Tap the stars above to rate it.</string>
    <string name="app_rating_dialog_rate_button_title">Rate it!</string>
    <string name="app_rating_dialog_rate_later_title">May be later</string>
    <string name="app_rating_goto_store_dialog_title">We\'re happy!</string>
    <string name="celebrate_emoji" translatable="false">😃🙌</string>
    <string name="app_rating_goto_store_dialog_msg">Please share this rating of our app on the Google Play Store by tapping \"Continue\"!</string>
    <string name="app_rating_pitch">This app is free, no ads, no tracking, open source and is made by contributors like you and me.
        Your feedback is our only encouragement.</string>
    <string name="app_rating_goto_store_dialog_button1_title">Not Interested</string>
    <string name="app_rating_goto_store_dialog_button2_title">Continue</string>
    <string name="app_rating_feedback_dialog_title">Contact us</string>
    <string name="app_rating_feedback_dialog_msg">Let us know how we can improve.</string>
    <string name="app_rating_feedback_dialog_mail_button_title">Email Us</string>
    <string name="app_rating_feedback_dialog_telegram_button_title">Telegram</string>
    <string name="auto_start_permission_dialog_title">AutoStart Permission</string>
    <string name="running_in_the_background">Running in the background</string>
    <string name="contact_based_reply">Contact based replies</string>
    <string name="pref_reply_contacts" translatable="false">pref_reply_contacts</string>
    <string name="contact_reply_type">Reply to</string>
    <string name="pref_code_blacklist" translatable="false">pref_blacklist</string>
    <string name="pref_reply_contacts_type" translatable="false">pref_reply_contacts_type</string>
    <string name="enable_contact_based_reply">Enable contact based replies</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="key_pref_select_contacts" translatable="false">pref_select_contacts</string>
    <string name="decrease_frequency">Decrease frequency</string>
    <string name="increase_frequency">Increase frequency</string>
    <string name="pref_enable_openai_replies_title">Enable AI Auto-Replies</string>
    <string name="pref_enable_openai_replies_summary">Use AI to generate smart replies</string>
    <string name="pref_openai_api_key_title">API Key</string>
    <string name="pref_openai_api_key_summary_not_set">API Key not set</string>
    <string name="pref_openai_api_key_dialog_title">Enter your API Key</string>
</resources>