<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.GeneralSettingsFragment">

    <PreferenceCategory android:title="@string/preference_category_general_label">

        <ListPreference android:title="@string/app_language"
            app:icon="@drawable/ic_language"
            android:key="@string/key_pref_app_language"
            android:entries="@array/app_language"
            android:entryValues="@array/app_language_value"
            app:useSimpleSummaryProvider="true"/>

        <CheckBoxPreference android:title="@string/add_attribution_label"
            android:key="@string/pref_is_append_watomatic_attribution"
            android:summary="@string/append_watomatic_arribution_checkbox_label"/>

        <SwitchPreferenceCompat
            android:key="pref_enable_openai_replies"
            android:title="@string/pref_enable_openai_replies_title"
            android:summary="@string/pref_enable_openai_replies_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            android:key="pref_openai_api_key"
            android:title="@string/pref_openai_api_key_title"
            android:summary="@string/pref_openai_api_key_summary_not_set"
            android:dialogTitle="@string/pref_openai_api_key_dialog_title"
            app:iconSpaceReserved="false"
            android:dependency="pref_enable_openai_replies"/>
      
    </PreferenceCategory>

</PreferenceScreen>