<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="45dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/app_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_help_you_leave_whatsapp"
        android:textAlignment="center"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- Main Auto Reply enable switch -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainAutoReplySwitchCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/mainAutoReplyTextCardView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="154dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mainAutoReplySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/mainAutoReplySwitchOffLabel" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Custom auto reply text card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainAutoReplyTextCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/mainAutoReplySwitchCardView"
        tools:layout_editor_absoluteX="134dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:text="@string/mainAutoReplyLabel"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/mainAutoReplyTextPlaceholder"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                />

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/mainAutoReplyEditBtnTooltip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Supported app selector checklist empty card.
        Actual checklist will be generated at runtime -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/supportedAppsSelectorCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/mainAutoReplyTextCardView"
        tools:layout_editor_absoluteX="134dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/selectAppsLabel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/enable_for_apps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                />

            <ImageView
                android:id="@+id/editEnabledAppsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/mainAutoReplyEditBtnTooltip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/enabled_apps_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editEnabledAppsButton"
                app:layout_constraintTop_toBottomOf="@id/selectAppsLabel"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Group reply switch card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/groupReplySwitchCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/supportedAppsSelectorCardView"
        tools:layout_editor_absoluteX="154dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/groupReplySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/groupReplySwitchLabel" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Reply frequency Time picker -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/replyFrequencyTimePickerCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/groupReplySwitchCardView"
        tools:layout_editor_absoluteX="134dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/timePickerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/time_picker_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timePickerSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:maxWidth="250dp"
                android:textSize="12sp"
                android:text="@string/time_picker_sub_title_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timePickerTitle"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frequencySetterWidget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/imgMinus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/minus"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/decrease_frequency" />

                <TextView
                    android:id="@+id/timeSelectedText"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintTop_toTopOf="@+id/imgMinus"
                    app:layout_constraintBottom_toBottomOf="@id/imgMinus"
                    app:layout_constraintStart_toEndOf="@+id/imgMinus"/>

                <ImageView
                    android:id="@+id/imgPlus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/plus"
                    app:layout_constraintStart_toEndOf="@+id/timeSelectedText"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/increase_frequency" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>